# visual-sequence-renamer

./: .cursorrules  .gitignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  SmartRenamer.spec  SmartRenamer_macos.spec  VisualSequenceRenamer.spec  VisualSequenceRenamer_macos.spec  package-lock.json  package.json  pyproject.toml  spec.md
.github/: dependabot.yml
.github/workflows/: build.yml  pages.yml
docs/: .env.example  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
docs/public/images/trust/: renamer.webm
docs/src/: env.d.ts
docs/src/components/: FeatureIcon.astro
docs/src/content/: config.ts
docs/src/content/landing/: index.md
docs/src/pages/: index.astro
src/app/: __init__.py  application_icon.py  main.py
src/app/core/: __init__.py  image_processor.py  rename.py  rename_thread.py
src/app/resources/: __init__.py  app_icon.icns
src/app/ui/: __init__.py  main_window.py  widgets.py
tests/: test_rename.py  test_smoke.py
